@@ -2,7 +2,7 @@ package App::Doh;
 
 use 5.010001;
 use namespace::autoclean;
-use version; our $VERSION = qv( sprintf '0.3.%d', q$Rev: 1 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.3.%d', q$Rev: 2 $ =~ /\d+/gmx );
 
 use Moo;
 use Class::Usul::Constants  qw( NUL TRUE );
@@ -39,7 +39,7 @@ App::Doh - An easy way to document a project using Markdown
 
 =head1 Version
 
-This documents version v0.3.$Rev: 1 $ of L<App::Doh>
+This documents version v0.3.$Rev: 2 $ of L<App::Doh>
 
 =head1 Description
 
@@ -63,6 +63,10 @@ F<App::Doh::Server> is the L<Web::Simple> based application server
 Defines these attributes;
 
 =over 3
+
+=item C<moniker>
+
+The abbreviated component name
 
 =item C<usul>
 
